--- a/gb/24/11/24/n14377782.md
+++ b/gb/24/11/24/n14377782.md
@@ -3,13 +3,12 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>吴清源杯女子围棋赛开幕 卢钰桦止步首轮</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/11/id14377855-468072519_976208507884174_7936116061277214469_n-600x400.jpg" />
-<h6>2024年11月24日，第七届“吴清源杯世界女子围棋公开赛”在福州吴清源围棋会馆拉开战幕，台湾女子最强卢钰桦五段（前左）对阵中国大陆世界冠军李赫六段（前右）。（海峰棋院提供）
-</h6>
+<h6>2024年11月24日，第七届“吴清源杯世界女子围棋公开赛”在福州吴清源围棋会馆拉开战幕，台湾女子最强卢钰桦五段（前左）对阵中国大陆世界冠军李赫六段（前右）。（海峰棋院提供）</h6>
 <hr>
 	<p>【大纪元2024年11月25日讯】（大纪元记者叶诚允报导）第七届“吴清源杯世界女子围棋公开赛”点燃战火，台湾唯一参赛的棋手——‘女子最强’卢钰桦五段不敌中国大陆世界冠军李赫六段，止步首轮。</p>
 <p>9月底，本届“吴清源杯”首度采用公开预选的方式决出10个本赛名额。中国大陆女棋手倾巢而出，人海战术十分奏效，抢得其中9张门票；韩国女棋手仅有吴侑珍一人晋级；台湾女棋手则全军覆没，日本未派棋手参赛。</p>
 <p>除预选赛10人外，还有14位女棋手直接进入本赛，各国分配名额为：中国大陆5人；韩、日各3人；台湾、奥地利（代表欧洲）、加拿大（代表北美）各1人。她们组成本届杯赛24强。</p>
-<figure id="attachment_14377857" aria-describedby="caption-attachment-14377857" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14377857-468351872_976208487884176_6358989352494385027_n.jpg"><img decoding="async" class=" wp-image-14377857" src="https://i.epochtimes.com/assets/uploads/2024/11/id14377857-468351872_976208487884176_6358989352494385027_n.jpg" alt="" width="600" b="271" /></a><figcaption id="caption-attachment-14377857" class="wp-caption-text">24位女棋手将争夺第七届“吴清源杯世界女子围棋公开赛”冠军。（海峰棋院提供）</figcaption></figure>
+<figure id="attachment_14377857" aria-describedby="caption-attachment-14377857" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14377857-468351872_976208487884176_6358989352494385027_n.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14377857" src="https://i.epochtimes.com/assets/uploads/2024/11/id14377857-468351872_976208487884176_6358989352494385027_n.jpg" alt="" width="600" b="271"></a><figcaption id="caption-attachment-14377857" class="wp-caption-text">24位女棋手将争夺第七届“吴清源杯世界女子围棋公开赛”冠军。（海峰棋院提供）</figcaption></figure>
 <p>根据上届杯赛八强的棋手分布，中、日、韩各占3人、3人和2人。因此，中国大陆的周泓余、於之莹、唐嘉雯，日本的藤泽里菜、上野爱咲美、上野梨纱，韩国的崔精、金恩持共8人为本届种子棋手，首轮轮空。其余16人捉对厮杀，具体对阵如下：</p>
 <p>李赫（中）VS（台）卢钰桦<br />
 曹又尹（中）VS（加）余瑾<br />
@@ -20,12 +19,12 @@
 罗楚玥（中）VS（中）陈一鸣<br />
 王晨星（中）VS（中）陈心飏</p>
 <p>11月24日，首轮比赛在福州市吴清源围棋会馆打响。台湾‘女子最强’棋手卢钰桦遭遇中国大陆世界冠军李赫。</p>
-<figure id="attachment_14377858" aria-describedby="caption-attachment-14377858" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14377858-468195009_976208421217516_2020032797009810517_n.jpg"><img decoding="async" class=" wp-image-14377858" src="https://i.epochtimes.com/assets/uploads/2024/11/id14377858-468195009_976208421217516_2020032797009810517_n.jpg" alt="" width="600" b="270" /></a><figcaption id="caption-attachment-14377858" class="wp-caption-text">台湾唯一参赛的‘女子最强’棋手卢钰桦五段在福州吴清源围棋会馆留影。（海峰棋院提供）</figcaption></figure>
+<figure id="attachment_14377858" aria-describedby="caption-attachment-14377858" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14377858-468195009_976208421217516_2020032797009810517_n.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14377858" src="https://i.epochtimes.com/assets/uploads/2024/11/id14377858-468195009_976208421217516_2020032797009810517_n.jpg" alt="" width="600" b="270"></a><figcaption id="caption-attachment-14377858" class="wp-caption-text">台湾唯一参赛的‘女子最强’棋手卢钰桦五段在福州吴清源围棋会馆留影。（海峰棋院提供）</figcaption></figure>
 <p>本局由李赫执黑先行。序盘，二人在右下角短兵相接，李赫似乎早有研究，卢钰桦应对不妥，白在局部苦活，外围被黑封锁。黑棋右上构筑大模样，局势占优。</p>
 <p>此后，卢钰桦紧咬局势，通过弃掉左上角，成功压制对手，并顺势扩张白棋左边模样，逐渐拉近差距。但卢钰桦中腹战斗时错失机会，未能发现黑右上角余味，导致深入敌阵白子遭对手围剿，败局已定。</p>
 <p>行至黑163手，卢钰桦见翻盘无望，遂停钟认输。李赫成功晋级十六强。</p>
 <p>首轮其它各场比赛均未爆出冷门，韩国世界冠军吴侑珍击败吴依铭，闯入十六强；其余晋级的均为中国大陆棋手。</p>
-<figure id="attachment_14377859" aria-describedby="caption-attachment-14377859" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14377859-468198664_976208404550851_5949624175893769905_n.jpg"><img decoding="async" class=" wp-image-14377859" src="https://i.epochtimes.com/assets/uploads/2024/11/id14377859-468198664_976208404550851_5949624175893769905_n.jpg" alt="" width="600" b="270" /></a><figcaption id="caption-attachment-14377859" class="wp-caption-text">2024年11月24日，第七届“吴清源杯世界女子围棋公开赛”在福州吴清源围棋会馆拉开战幕。（海峰棋院提供）</figcaption></figure>
+<figure id="attachment_14377859" aria-describedby="caption-attachment-14377859" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14377859-468198664_976208404550851_5949624175893769905_n.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14377859" src="https://i.epochtimes.com/assets/uploads/2024/11/id14377859-468198664_976208404550851_5949624175893769905_n.jpg" alt="" width="600" b="270"></a><figcaption id="caption-attachment-14377859" class="wp-caption-text">2024年11月24日，第七届“吴清源杯世界女子围棋公开赛”在福州吴清源围棋会馆拉开战幕。（海峰棋院提供）</figcaption></figure>
 <p>赛后进行了十六强赛的抽签仪式，本着同国棋手尽量避免相遇的原则，韩、日两国六员女将联手对抗中国队。</p>
 <p>李赫（中）VS（韩）崔精<br />
 周泓余（中）VS（韩）吴侑珍<br />
@@ -35,45 +34,39 @@
 罗楚玥（中）VS（日）上野梨纱<br />
 王晨星（中）VS（日）藤泽里菜<br />
 魏欣桐（中）VS（日）上野爱咲美</p>
-<figure id="attachment_14377854" aria-describedby="caption-attachment-14377854" style="width: 648px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14377854-040d5afd37c477059be29728740fcefc.jpg"><img decoding="async" class=" wp-image-14377854" src="https://i.epochtimes.com/assets/uploads/2024/11/id14377854-040d5afd37c477059be29728740fcefc.jpg" alt="" width="648" b="237" /></a><figcaption id="caption-attachment-14377854" class="wp-caption-text">第七届“吴清源杯世界女子围棋公开赛”赛程赛果。（大纪元制图）</figcaption></figure>
+<figure id="attachment_14377854" aria-describedby="caption-attachment-14377854" style="width: 648px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14377854-040d5afd37c477059be29728740fcefc.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14377854" src="https://i.epochtimes.com/assets/uploads/2024/11/id14377854-040d5afd37c477059be29728740fcefc.jpg" alt="" width="648" b="237"></a><figcaption id="caption-attachment-14377854" class="wp-caption-text">第七届“吴清源杯世界女子围棋公开赛”赛程赛果。（大纪元制图）</figcaption></figure>
 <p>本届赛事赛程安排得十分紧凑，25日进行十六强赛，紧接着26日八强赛，27日半决赛，28日至30日决出最终冠军。</p>
 <p>在此前已举行的六届赛事中，韩国棋手摘得5次冠军，中国大陆棋手1次问鼎，台、日棋手尚未取得零的突破。</p>
-<figure id="attachment_14377856" aria-describedby="caption-attachment-14377856" style="width: 639px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14377856-ab340b4d4953e8efbfb1365776e774b2.jpg"><img decoding="async" class=" wp-image-14377856" src="https://i.epochtimes.com/assets/uploads/2024/11/id14377856-ab340b4d4953e8efbfb1365776e774b2.jpg" alt="" width="639" b="248" /></a><figcaption id="caption-attachment-14377856" class="wp-caption-text">历届“吴清源杯世界女子围棋赛”前四名。（大纪元制图）</figcaption></figure>
+<figure id="attachment_14377856" aria-describedby="caption-attachment-14377856" style="width: 639px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14377856-ab340b4d4953e8efbfb1365776e774b2.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14377856" src="https://i.epochtimes.com/assets/uploads/2024/11/id14377856-ab340b4d4953e8efbfb1365776e774b2.jpg" alt="" width="639" b="248"></a><figcaption id="caption-attachment-14377856" class="wp-caption-text">历届“吴清源杯世界女子围棋赛”前四名。（大纪元制图）</figcaption></figure>
 <p>“吴清源杯”是由中国围棋协会主办，比赛采用中国围棋规则，每方基本用时2小时， 60秒读秒5次。冠军奖金人民币50万元（约合6.9万美元），亚军奖金人民币20万元（约合2.76万美元）。</p>
 <p>责任编辑：李熔石</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/31/n11835336.md#1" target="_blank">王赫：庚子年首月 中共地动山摇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/29/n10261167.md#1" target="_blank">一位加拿大生物学家无止境的神奇之路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/10/n9943237.md#1" target="_blank">林辉：上了中共当的“一二九”学生运动</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/1/n11424700.md#1" target="_blank">罗兰：中共公安何以成公害</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/28/n14519658.md#1">大唐翰墨端严遒美 笔走龙蛇奔放飘逸（下）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/7/n14526567.md#1">汉文帝受小官当众羞辱竟升他的官 到底怎回事？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531481.md#1">辛劳十余年 老仆扶养辞世主子三女长大 未曾一睹芳容</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533725.md#1">李渊宠妃搅弄风云 李世民无端遭诬陷 忍辱不争</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/21/n14535826.md#1">【未解之谜】灵界能力觉醒 美国女子看到幽灵与彩色光环</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540208.md#1">【佳音时刻】养老金审计乱象 山西公务员22岁退休</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540523.md#1">【时事金扫描】抹黑美军行动 女记者被川普点名</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540235.md#1">【纪元焦点】北京传“秋天有变” 习气数尽了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14538949.md#1">敏感时刻 北京城传出政治暗语：秋天有变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538818.md#1">豆腐渣工程频现 施工人员揭云南高速路黑幕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538823.md#1">成本过亿 小沈阳新片上映3天票房仅7.6万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539257.md#1">《捍卫战士3》可能是最终章 独行侠面临生存危机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539554.md#1">陆剧《长安的荔枝》突撤档 那尔那茜遭封杀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538624.md#1">《名侦探柯南 独眼的残像》影评：毛利小五郎大出风头</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539072.md#1">《F1电影》制作成本高 全球首映票房预测出炉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538690.md#1">7种过期调味品千万别吃！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538188.md#1">夏天在花园里用这一物 可赶走恼人的蚊子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536578.md#1">心血管最爱运动——循环系统伸展操</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539087.md#1">专家：避免用三种痛苦的方式伤害伴侣</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539794.md#1">丰田销量连三月创新高 美日中市场需求强劲</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652090.md#1">【十字路口】防疫或布疫？深夜无人机洒怪液</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652050.md#1">【直播】听证会：中共在拉丁美洲的组织犯罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/24/n14377782.htm">吴清源杯女子围棋赛开幕 卢钰桦止步首轮</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/24/n14377782.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
